# foxies

./: Cargo.toml  README.md  lib.rs  rustfmt.toml
contracts/chickens/: Cargo.toml  data.rs  lib.rs
contracts/eggs/: Cargo.toml  lib.rs
contracts/eggs_contract/: Cargo.toml  eggs_contract.contract  eggs_contract.json  eggs_contract.wasm
contracts/factory/: Cargo.toml  lib.rs
contracts/foxes/: Cargo.toml  data.rs  lib.rs
contracts/nft_contract/: Cargo.toml  lib.rs  nft_contract.contract  nft_contract.wasm
contracts/outputs/: chickens.contract  chickens.json  chickens.wasm  factory.contract  factory.json  factory.wasm  foxes.contract  foxes.json  foxes.wasm  staking.contract  staking.json  staking.wasm
contracts/psp22_eggs_token/: Cargo.toml  lib.rs
contracts/psp34_nft/: Cargo.toml  lib.rs
contracts/staking/: Cargo.toml  lib.rs
contracts/staking_contract/: Cargo.toml  lib.rs  staking_contract.contract  staking_contract.json  staking_contract.wasm
contracts/swap/: Cargo.toml  lib.rs
factory/: Cargo.toml  lib.rs
foxes/: Cargo.toml  lib.rs
front/: package.json  pnpm-lock.yaml
front/metadata/: nft_contract.json
front/pages/: _app.js  coop.tsx  index.tsx  mint.tsx
frontend/: package.json
frontend/components/: Header.js  HeaderCoop.js  Sound.js  Utils.js  toast.js
frontend/functions/: index.js
frontend/pages/: _app.js  _document.js  coop.js  coop2.js  index.js  lastnight.js  mint.js
frontend/styles/: Home.module.css  globals.css
helpers/: constants.rs
impls/: mod.rs
impls/mint_character/: mod.rs  types.rs
impls/mint_token/: mint_token.rs  mod.rs  types.rs
impls/staking/: mod.rs  staking.rs  types.rs
minting_test/: factory.js  package.json
minting_test/outputs/: factory.json
staking/: lib.rs
traits/: eggs.rs  mint_character.rs  mint_token.rs  mod.rs  staking.rs
